[gd_scene load_steps=5 format=2]

[ext_resource path="res://entity/Player.gd" type="Script" id=1]
[ext_resource path="res://sprite/player.png" type="Texture" id=2]
[ext_resource path="res://sfx/woosh_sound001.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.1027, 18.2602 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.502273, 0.936423 )
shape = SubResource( 1 )

[node name="InvulnTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="MeleeAttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MeleeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
